fix league table on mobile

--- a/react-app/src/assets/theme.css
+++ b/react-app/src/assets/theme.css
@@ -1178,34 +1178,6 @@ div.DTE_Inline div.DTE_Field input {
     background-color: #FFFEF0;
 }
 
-/*
- * PRINTING
- * Print display styles
- */
-.DTTT_Print #content_wrapper {
-    margin: 0 !important;
-    padding: 0 !important;
-    left: 0 !important;
-    top: 0 !important;
-    right: 0 !important;
-    bottom: 0 !important;
-}
-
-.DTTT_print_info h6 {
-    font-weight: normal;
-    font-size: 28px;
-    line-height: 28px;
-    margin: 1em;
-}
-
-.DTTT_print_info p {
-    font-size: 14px;
-    line-height: 20px;
-}
-
-tr.shown + tr {
-    background-color: #f7f7f7;
-}
 
 /*===============================================
   Dropzone
